--- a/index2_.html
+++ b/index2_.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> Cursos de Alura DevOps</title>
+     <title> Cursos de Alura DevOps y más</title>
 </head>
 <body>
      <ul>
