--- a/index2_.html
+++ b/index2_.html
@@ -6,9 +6,9 @@
 </head>
 <body>
      <ul>
-         <li>Vagrant:Gerenciando máquinas virtuales</li>
-         <li>Docker:Creando containers sin dolor de cabeza </li>
-         <li>Ansible </li>
+         <li>Vagrant: Gerenciando máquinas virtuales</li>
+         <li>Docker: Creando containers sin dolor de cabeza </li>
+         <li>Ansible: Su infraestructura como codigo</li>
          <li>Integración Continua: Madurez y Productividad en el Desarrollo de Software</li>
          <li>Kubernetes: Introducción a la orquestacion de Kubernetes</li>
      </ul>
